# showtags

./: README.md  changelog.txt  combo.py  dialogs.py  docs.txt  dragbox.py  find_titles  putart  pyproject.toml  showart  showtags  taggr.py  textview.py
libshowtags/: __init__.py  combo.py  dragbox.py  ftitles.py  mymagic.py  showtags.py
